--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <div class="content">
-          <a href=""><img class="logo" src="./images/2.jpg" alt="logo"/></a>
+          <a href=""><img class="logo" src="/images/2.jpg" alt="logo"/></a>
           <ul class="navlinks">
             <li><a href="#about">About us</a></li>
             <li><a href="#services">Services</a></li>
