--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <section id="about">
       <div class="info">
         <h2>About me</h2>
-        <img class="mustache" src="/images/mustache_gold.png" alt="mustache" />
+        <img class="mustache" src="./images/mustache_gold.png" alt="mustache" />
       </div>
 
       <div class="content">
         <div class="box1">
           <div class="avatar">
-            <img class="person" src="/images/pawel_2.jpg" alt="" />
+            <img class="person" src="./images/pawel_2.jpg" alt="" />
           </div>
         </div>
         <div class="box2">
@@ -101,7 +101,7 @@
           <div class="services nr1">
             <div class="description-services">
               <div class="logo-services">
-                <img class="logo-mini" src="/images/scissors.png" alt="" />
+                <img class="logo-mini" src="./images/scissors.png" alt="" />
               </div>
               <br />
               <h2>Hair Cut</h2>
@@ -115,7 +115,7 @@
           <div class="services nr2">
             <div class="description-services">
               <div class="logo-services">
-                <img class="logo-mini" src="/images/scissors.png" alt="" />
+                <img class="logo-mini" src="./images/scissors.png" alt="" />
               </div>
               <br />
               <h2>Hair styling</h2>
@@ -133,7 +133,7 @@
           <div class="services nr3">
             <div class="description-services">
               <div class="logo-services">
-                <img class="logo-mini" src="/images/scissors.png" alt="" />
+                <img class="logo-mini" src="./images/scissors.png" alt="" />
               </div>
               <br />
               <h2>Hair wash</h2>
@@ -147,7 +147,7 @@
           <div class="services nr4">
             <div class="description-services">
               <div class="logo-services">
-                <img class="logo-mini" src="/images/scissors.png" alt="" />
+                <img class="logo-mini" src="./images/scissors.png" alt="" />
               </div>
               <br />
               <h2>Shave</h2>
@@ -166,7 +166,7 @@
     <section id="prices">
       <div class="info our">
         <h2>Our Prices</h2>
-        <img class="mustache" src="/images/mustache_gold.png" alt="mustache" />
+        <img class="mustache" src="./images/mustache_gold.png" alt="mustache" />
       </div>
       <div class="content">
         <div class="pricebox">
@@ -203,7 +203,7 @@
     <section id="gallery">
             <div class="info foto">
                     <h2>A few moments</h2>
-                    <img class="mustache" src="/images/mustache_gold.png" alt="mustache" />
+                    <img class="mustache" src="./images/mustache_gold.png" alt="mustache" />
                   </div>
         <div class="content">
             <div class="random-container" style="height: 100%;">
@@ -267,7 +267,7 @@
      <section id="contact">
             <div class="info contact">
                     <h2>Stay in touch</h2>
-                    <img class="mustache" src="/images/mustache_gold.png" alt="mustache" />
+                    <img class="mustache" src="./images/mustache_gold.png" alt="mustache" />
                   </div>
                   <div class="content">
                       <div class="left-side">
